--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.24.1",
     "@langchain/google-genai": "^0.2.16",
     "axios": "^1.11.0",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
