--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
     "@google/genai": "^1.15.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/google-genai": "^0.2.16",
     "axios": "^1.11.0",
+    "bullmq": "^5.58.4",
     "cheerio": "^1.1.2",
+    "chromadb": "^3.0.14",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
